// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`achiever.goal.triage.next.acceptance given: [case3] inflight goals exist when: [t0] goal.triage.next is called then: stderr matches snapshot 1`] = `
"🦉 to forget an ask is to break a promise. remember.

🔮 goal.triage.next --when hook.onStop
   └─ inflight (1)
      └─ (1)
         ├─ slug = fix-auth-test
         ├─ why.ask = fix the flaky test in auth.test.ts
         ├─ status = inflight → ✋ finish this first
         ├─ tip: run \`rhx goal.memory.get --slug fix-auth-test\` to see the goal
         └─ tip: if blocked, run \`rhx goal.memory.set --slug fix-auth-test --status.choice blocked --status.reason "..."\`
"
`;

exports[`achiever.goal.triage.next.acceptance given: [case4] enqueued goals exist but no inflight when: [t0] goal.triage.next is called then: stderr matches snapshot 1`] = `
"🦉 to forget an ask is to break a promise. remember.

🔮 goal.triage.next --when hook.onStop
   └─ enqueued (1)
      └─ (1)
         ├─ slug = update-readme-env
         ├─ why.ask = update the readme to mention the new env var
         ├─ status = enqueued → ✋ finish this first
         ├─ tip: run \`rhx goal.memory.get --slug update-readme-env\` to see the goal
         └─ tip: if blocked, run \`rhx goal.memory.set --slug update-readme-env --status.choice blocked --status.reason "..."\`
"
`;

exports[`achiever.goal.triage.next.acceptance given: [case5] both inflight and enqueued goals exist when: [t0] goal.triage.next is called then: stderr matches snapshot 1`] = `
"🦉 to forget an ask is to break a promise. remember.

🔮 goal.triage.next --when hook.onStop
   └─ inflight (1)
      └─ (1)
         ├─ slug = fix-auth-test
         ├─ why.ask = fix the flaky test
         ├─ status = inflight → ✋ finish this first
         ├─ tip: run \`rhx goal.memory.get --slug fix-auth-test\` to see the goal
         └─ tip: if blocked, run \`rhx goal.memory.set --slug fix-auth-test --status.choice blocked --status.reason "..."\`
"
`;

exports[`achiever.goal.triage.next.acceptance given: [case6] hook.onBoot with inflight goals when: [t0] goal.triage.next --when hook.onBoot is called then: stderr matches snapshot 1`] = `
"🦉 to forget an ask is to break a promise. remember.

🔮 goal.triage.next --when hook.onBoot
   └─ inflight (1)
      └─ (1)
         ├─ slug = fix-auth-test
         ├─ why.ask = fix the flaky test in auth.test.ts
         ├─ status = inflight → ✋ finish this first
         ├─ tip: run \`rhx goal.memory.get --slug fix-auth-test\` to see the goal
         └─ tip: if blocked, run \`rhx goal.memory.set --slug fix-auth-test --status.choice blocked --status.reason "..."\`
"
`;

exports[`achiever.goal.triage.next.acceptance given: [case7] hook.onBoot with enqueued goals when: [t0] goal.triage.next --when hook.onBoot is called then: stderr matches snapshot 1`] = `
"🦉 to forget an ask is to break a promise. remember.

🔮 goal.triage.next --when hook.onBoot
   └─ enqueued (1)
      └─ (1)
         ├─ slug = update-readme-env
         ├─ why.ask = update the readme to mention the new env var
         ├─ status = enqueued → ✋ finish this first
         ├─ tip: run \`rhx goal.memory.get --slug update-readme-env\` to see the goal
         └─ tip: if blocked, run \`rhx goal.memory.set --slug update-readme-env --status.choice blocked --status.reason "..."\`
"
`;
